# spotick

./: .gitattributes  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
src/: auth.rs  autostart.rs  main.rs  service.rs  settings.rs  ui.rs  util.rs  viewmodel.rs  views.rs
src/auth/: oauth2_pkce.rs
src/service/: media_service.rs  windows_media_service.rs
src/settings/: app_settings.rs
src/ui/: window.rs
src/ui/window/: dialog_window.rs  main_window.rs  settings_window.rs  window_creation_settings.rs
src/views/: window.rs
ui/: app-window.slint  available-sessions-window.slint  main-window.slint  settings-window.slint
ui/widgets/: Button.slint  MediaButton.slint  OptionsButton.slint  Switch.slint  media-button.slint  options-button.slint  step-slider.slint
