[package]
name = "spotick"
version = "0.1.0"
edition = "2021"
authors = ["Dominik Strutz"]
description = "Simple and lightweight Windows widget for Spotify"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.99"
i-slint-backend-winit = "1.12.1"
image = "0.25.6"
slint = { version = "1.12.1", default-features = false, features = ["accessibility", "std", "compat-1-2", "renderer-skia", "backend-winit"] }
tokio = { version = "1.47.1", features = ["macros", "rt", "rt-multi-thread"] }

[build-dependencies]
slint-build = "1.12.1"
