[package]
name = "spotick"
version = "0.1.0"
edition = "2021"
authors = ["Dominik Strutz"]
description = "Simple and lightweight Windows widget for Spotify"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = { version = "0.4.41", default-features = false, features = ["serde", "std", "now", "clock"] }
i-slint-backend-winit = "1.12.1"
image = "0.25.6"
log = "0.4.27"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.143"
sha2 = "0.10.9"
slint = { version = "1.12.1", default-features = false, features = ["accessibility", "std", "compat-1-2", "renderer-skia", "backend-winit"] }
tokio = { version = "1.47.1", features = ["macros", "rt", "rt-multi-thread", "fs"] }
tokio-util = { version = "0.7.16", features = ["rt"] }
warp = { version = "0.4.2", features = ["server"] }

[build-dependencies]
slint-build = "1.12.1"

[dev-dependencies]
test-context = "0.4.1"
