[package]
name = "spotick"
version = "0.1.2"
edition = "2021"
authors = ["Dominik Strutz"]
description = "Simple and lightweight Windows widget for media applications like Spotify"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
env_logger = "0.11.8"
i-slint-backend-winit = "1.12.1"
image = { version = "0.25.6", default-features = false, features = ["png", "jpeg", "bmp"] }
log = "0.4.27"
serde = "1.0.219"
serde_json = "1.0.143"
slint = { version = "1.12.1", default-features = false, features = ["accessibility", "std", "compat-1-2", "renderer-skia", "backend-winit", "serde"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt", "rt-multi-thread", "fs", "time"] }
tokio-util = { version = "0.7.16", features = ["rt"] }
windows = { version = "0.61.3", features = ["Media_Control", "Storage_Streams"] }
winreg = "0.55.0"

[build-dependencies]
slint-build = "1.12.1"

[dev-dependencies]
rand = "0.9.2"
test-context = "0.4.1"
